add open graph to meta

--- a/source/template/includes/head.njk
+++ b/source/template/includes/head.njk
@@ -1,7 +1,11 @@
 {%- macro head() -%}
 
-{#- Set up page data. #}
+{#- In case anyone is still using Internet Explorer, make the site act more
+		like Edge browsers. #}
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+{#- Make sure pages display as expected in all browsers, specifically mobile
+		browsers or touchscreens, which may need user-zoom capabilities. #}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {#- This is the title of the page, that appears in the browser title bar.
@@ -11,13 +15,18 @@
 <meta name="title" content="{{- title }} [{{ meta.title }}]">
 
 {#- Set up content data. #}
-<meta name="author" content="{{- meta.author }}">
-<meta name="description" content="{{- meta.description }}">
+<meta name="author" content="{{- meta.author -}}">
+<meta name="description" content="{{- meta.description -}}">
 
-{#- Set up site data. #}
-<meta name="generator" content="{{- meta.generator }}">
-<link rel="canonical" href="{{- meta.uri }}">
-<link rel="icon" href="{{- meta.favicon }}">
+{#- Set up page data. #}
+<meta name="generator" content="{{- meta.generator -}}">
+<link rel="icon" href="{{- meta.favicon -}}">
+<link rel="canonical" href="{{- meta.uri -}}{{- page.url -}}">
+
+{#- Set up Open Graph metadata. #}
+<meta property="og:type" content="{{- meta.type -}}">
+<meta property="og:title" content=" content="{{- title }} [{{ meta.title }}]">
+<meta property="og:description" content="{{- meta.description -}}">
 
 {#- Set up site assets. #}
 <link rel="stylesheet" href="">
