include skip links

--- a/source/template/layouts/base.njk
+++ b/source/template/layouts/base.njk
@@ -6,6 +6,13 @@
 <!doctype html>
 <html>
 
+<section aria-label="Skip links">
+	<ul>
+		<li><a href="#nav-main">Skip to site navigation</a></li>
+		<li><a href="#main">Skip to page content</a></li>
+	</ul>
+</section>
+
 <head>
 	{{- head() -}}
 </head>
