--- a/source/template/layouts/blog.njk
+++ b/source/template/layouts/blog.njk
@@ -2,3 +2,13 @@
 layout: base
 pageClass: page
 ---
+
+<h1>{{- title -}}</h1>
+
+{{- content | safe -}}
+
+<ul>
+{%- for post in collections.posts | reverse %}
+	<li><a href="{{- post.url | url -}}">{{- post.data.title -}}</a></li>
+{%- endfor -%}
+</ul>
