--- a/source/template/layouts/blog.njk
+++ b/source/template/layouts/blog.njk
@@ -9,6 +9,8 @@ pageClass: page
 
 <ul>
 {%- for post in collections.posts | reverse %}
-	<li><a href="{{- post.url | url -}}">{{- post.data.title -}}</a></li>
+	<li>
+		{{- post.date | date -}}:
+		<a href="{{- post.url | url -}}">{{- post.data.title -}}</a></li>
 {%- endfor -%}
 </ul>
