fix head output

--- a/source/template/includes/head.njk
+++ b/source/template/includes/head.njk
@@ -25,7 +25,7 @@
 
 {#- Set up Open Graph metadata. #}
 <meta property="og:type" content="{{- meta.type -}}">
-<meta property="og:title" content=" content="{{- title }} [{{ meta.title }}]">
+<meta property="og:title" content="{{- title }} [{{ meta.title }}]">
 <meta property="og:description" content="{{- meta.description -}}">
 
 {#- Set up site assets. #}
