forgot to add charset and lang

--- a/source/template/includes/head.njk
+++ b/source/template/includes/head.njk
@@ -8,6 +8,9 @@
 		browsers or touchscreens, which may need user-zoom capabilities. #}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+{#- Set the HTML character encoding. -#}
+<meta charset="{{- meta.charset -}}">
+
 {#- This is the title of the page, that appears in the browser title bar.
 		It pulls in the title from the page or post front matter, and appends the
 		site title to the title. #}
