--- a/source/template/layouts/base.njk
+++ b/source/template/layouts/base.njk
@@ -4,7 +4,7 @@
 {%- from "footer.njk" import footer with context -%}
 
 <!doctype html>
-<html>
+<html lang="{{- meta.language -}}">
 
 <head>
 	{{- head() -}}
