--- a/source/template/includes/post-meta.njk
+++ b/source/template/includes/post-meta.njk
@@ -8,4 +8,12 @@
 	<h1>{{- title -}}</h1>
 	<p>{{- date | date -}}</p>
 
+	{%- if tags -%}
+		<ul>
+			{%- for tag in tags -%}
+				{%- if tag != 'posts' -%}<li>{{- tag -}}</li>{%- endif -%}
+			{%- endfor -%}
+		</ul>
+	{%- endif -%}
+
 {%- endmacro -%}
