add html base utils

--- a/source/template/includes/nav.njk
+++ b/source/template/includes/nav.njk
@@ -2,7 +2,7 @@
 
 <ul>
 {%- for item in items -%}
-	<li><a href="{{- item.url | url -}}">{{- item.data.title -}}</a></li>
+	<li><a href="{{- item.url -}}">{{- item.data.title -}}</a></li>
 {%- endfor -%}
 </ul>
 
