update posts list, create tag pages, tag archive

--- a/source/template/includes/post-meta.njk
+++ b/source/template/includes/post-meta.njk
@@ -19,7 +19,7 @@
 		<dl>
 			<dt>Tags:</dt>
 			{%- for tag in tags -%}
-				{%- if tag != 'posts' -%}<dd>{{- tag -}}</dd>{%- endif -%}
+				{%- if tag != 'posts' -%}<dd><a href="/blog/tags/{{- tag | slug -}}/">{{- tag -}}</a></dd>{%- endif -%}
 			{%- endfor -%}
 		</dl>
 	{%- endif -%}
