--- a/source/template/layouts/blog.njk
+++ b/source/template/layouts/blog.njk
@@ -3,15 +3,10 @@ layout: base
 pageClass: page
 ---
 
+{%- from "post-list.njk" import postList with context -%}
+
 <h1>{{- title -}}</h1>
 
 {{- content | safe -}}
 
-<ul>
-{%- for post in collections.posts | reverse %}
-	<li>
-		{{- post.date | date -}}:
-		<a href="{{- post.url | url -}}">{{- post.data.title -}}</a>
-	</li>
-{%- endfor -%}
-</ul>
+{{- postList(collections.posts) -}}
