update post meta for post lists and post

--- a/source/template/includes/post-list.njk
+++ b/source/template/includes/post-list.njk
@@ -1,10 +1,16 @@
+{%- from "post-meta.njk" import postMeta with context -%}
+
 {%- macro postList(collection) -%}
 
 <ul>
 {%- for post in collection | reverse %}
 	<li>
-		{{- post.date | date -}}:
-		<a href="{{- post.url -}}">{{- post.data.title -}}</a>
+		{{- postMeta(
+				image = post.data.image,
+				title = post.data.title,
+				date = post.data.date,
+				link = post.url
+		) -}}
 	</li>
 {%- endfor -%}
 </ul>
