--- a/source/template/layouts/post.njk
+++ b/source/template/layouts/post.njk
@@ -7,7 +7,7 @@ pageClass: post
 
 <article>
 	<div class="post-header">
-		{{- postMeta() -}}
+		{{- postMeta(image, title, date, tags) -}}
 	</div>
 
 	<div class="post-content">
