--- a/source/template/includes/post-list.njk
+++ b/source/template/includes/post-list.njk
@@ -1,17 +1,20 @@
 {%- from "post-meta.njk" import postMeta with context -%}
 
-{%- macro postList(collection) -%}
+{%- macro postList(collection, size) -%}
 
 <ul>
 {%- for post in collection | reverse %}
-	<li>
-		{{- postMeta(
-				image = post.data.image,
-				title = post.data.title,
-				date = post.data.date,
-				link = post.url
-		) -}}
-	</li>
+	{%- set image = post.data.image -%}
+	{%- set title = post.data.title -%}
+	{%- set date = post.data.date -%}
+	{%- set link = post.url -%}
+
+	{%- if size and loop.index <= size -%}
+		<li>{{- postMeta(image, title, date, link) -}}</li>
+	{%- elseif not size -%}
+		<li>{{- postMeta(image, title, date, link) -}}</li>
+	{%- endif -%}
+
 {%- endfor -%}
 </ul>
 
