--- a/source/template/layouts/home.njk
+++ b/source/template/layouts/home.njk
@@ -3,4 +3,19 @@ layout: base
 pageClass: home
 ---
 
-<h1>{{- meta.title -}}</h1>
+{%- from "post-list.njk" import postList with context -%}
+
+<section aria-labelledby="hero-title">
+	<figure>
+		<img alt="Illustration of a laptop on a desk, with an open notebook on the left and a cup of coffee on the right" src="https://images.unsplash.com/vector-1738590593450-647695dbf9d0">
+		<figcaption><a href="https://unsplash.com/illustrations/a-laptop-computer-sitting-on-top-of-a-desk-next-to-a-cup-of-coffee-Qqn9VFkdV6E">Photo credit Art Attack</a></figcaption>
+	</figure>
+	<h1 id="hero-title">{{- meta.title -}}</h1>
+
+	{{- content | safe -}}
+
+	<a href="/about/">About</a>
+	<a href="/contact/">Contact</a>
+</section>
+
+{{- postList(collections.posts, size='4') -}}
