add some content to header, footer

--- a/source/template/includes/footer.njk
+++ b/source/template/includes/footer.njk
@@ -1,5 +1,7 @@
 {%- macro footer() -%}
 
-<p>Footer</p>
+<p>{{- meta.title -}}<p>
+<p>Proin at iaculis turpis. Ut commodo quis metus eget facilisis. Ut non ex felis. Proin laoreet nisl a massa pellentesque condimentum.</p>
+<p>© 2025, Reed Piernock</p>
 
 {%- endmacro -%}
