--- a/source/template/includes/header.njk
+++ b/source/template/includes/header.njk
@@ -1,5 +1,7 @@
 {%- macro header() -%}
 
-<p>Header</p>
+{# <img alt="Illustration of a clipboard with checkmark items on it" src="https://images.unsplash.com/vector-1738179384899-92a88c7ce943" eleventy:widths="200"> #}
+<img alt="Illustration of a laptop on a desk, with an open notebook on the left and a cup of coffee on the right" src="https://images.unsplash.com/vector-1738590593450-647695dbf9d0" eleventy:widths="200">
+<p>{{- meta.title -}}<p>
 
 {%- endmacro -%}
