update link colors, brightness/contrast on images

--- a/source/presentation/scss/settings/_colors.scss
+++ b/source/presentation/scss/settings/_colors.scss
@@ -1,5 +1,7 @@
 @use "sass:color";
 
+// Color palette created in coolors.
+// https://coolors.co/392d43-e8e6d8-e75626-3d4853-84c4b1
 $colors: (
 	"dark": #392d43,
 	"light": #e8e6d8,
