--- a/source/presentation/scss/layouts/_base.scss
+++ b/source/presentation/scss/layouts/_base.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: var(--color-background);
-  color: var(--color-foreground);
+  background-color: var(--color-background, var(--color-dark));
+  color: var(--color-foreground, var(--color-light));
   font-family: "Public Sans", system-ui, sans-serif;
   font-size: 1.25rem;
   line-height: 1.5;
