move location of images, css, webfonts

--- a/source/template/includes/head.njk
+++ b/source/template/includes/head.njk
@@ -32,6 +32,6 @@
 <meta property="og:description" content="{{- meta.description -}}">
 
 {#- Set up site assets. #}
-<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="/presentation/css/styles.css">
 
 {%- endmacro -%}
