--- a/source/template/layouts/home.njk
+++ b/source/template/layouts/home.njk
@@ -7,7 +7,7 @@ pageClass: home
 
 <section aria-labelledby="hero-title">
 	<figure>
-		<img alt="Illustration of a laptop on a desk, with an open notebook on the left and a cup of coffee on the right" src="https://images.unsplash.com/vector-1738590593450-647695dbf9d0">
+		<img alt="Illustration of a laptop on a desk, with an open notebook on the left and a cup of coffee on the right" src="/presentation/images/Qqn9VFkdV6E-unsplash.png">
 		<figcaption><a href="https://unsplash.com/illustrations/a-laptop-computer-sitting-on-top-of-a-desk-next-to-a-cup-of-coffee-Qqn9VFkdV6E">Photo credit Art Attack</a></figcaption>
 	</figure>
 	<h1 id="hero-title">{{- meta.title -}}</h1>
