--- a/source/template/includes/nav.njk
+++ b/source/template/includes/nav.njk
@@ -1,6 +1,6 @@
 {%- macro nav(items) -%}
 
-<ul>
+<ul role="list">
 {%- for item in items -%}
 	<li><a href="{{- item.url -}}">{{- item.data.title -}}</a></li>
 {%- endfor -%}
