set layout and styles for posts

--- a/source/presentation/scss/layouts/_base.scss
+++ b/source/presentation/scss/layouts/_base.scss
@@ -14,13 +14,13 @@ body {
 	display: grid;
 	grid-template-columns:
 	[full-start]
-			minmax(0, 1fr)
+			minmax(1rem, 1fr)
 				[wide-start]
-					2rem
+					minmax(0, 1fr)
 					[main-start] minmax(0, 80ch) [main-end]
-					2rem
+					minmax(0, 1fr)
 				[wide-end]
-			minmax(0, 1fr)
+			minmax(1rem, 1fr)
 		[full-end];
 }
 
