--- a/source/presentation/scss/settings/_fonts.scss
+++ b/source/presentation/scss/settings/_fonts.scss
@@ -3,7 +3,7 @@
 	font-weight: 100 1000;
 	font-style: normal;
 	src:
-		url("../webfonts/Lora-VariableFont_wght.ttf") format("ttf");
+		url("/presentation/webfonts/Lora-VariableFont_wght.ttf") format("ttf");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
 	font-weight: 100 1000;
 	font-style: italic;
 	src:
-		url("../webfonts/Lora-Italic-VariableFont_wght.ttf") format("ttf");
+		url("/presentation/webfonts/Lora-Italic-VariableFont_wght.ttf") format("ttf");
 }
 
 
@@ -20,7 +20,7 @@
 	font-weight: 100 1000;
 	font-style: normal;
 	src:
-		url("../webfonts/PublicSans-VariableFont_wght.ttf") format("ttf");
+		url("/presentation/webfonts/PublicSans-VariableFont_wght.ttf") format("ttf");
 }
 
 @font-face {
@@ -28,5 +28,5 @@
 	font-weight: 100 1000;
 	font-style: italic;
 	src:
-		url("../webfonts/PublicSans-Italic-VariableFont_wght.ttf") format("ttf");
+		url("/presentation/webfonts/PublicSans-Italic-VariableFont_wght.ttf") format("ttf");
 }
