--- a/source/template/includes/post-meta.njk
+++ b/source/template/includes/post-meta.njk
@@ -1,22 +1,29 @@
 {%- macro postMeta(image, title, date, link, tags) -%}
 
-	<figure>
-		<img alt="{{- image.alt -}}" src="{{- image.source -}}">
-		{%- if image.credit and layout == 'post' -%}
-			<figcaption><a href="{{- image.link -}}">Photo credit {{ image.credit -}}</a></figcaption>
-		{%- endif -%}
-	</figure>
+{%- set titleTag -%}
+	{{- 'h1' if layout == 'post' else 'p' -}}
+{%- endset -%}
 
-	{%- if layout == 'post' -%}
-		<h1>{{- title -}}</h1>
-	{%- else -%}
-		<p><a href="{{- link -}}">{{- title -}}</a></p>
+<figure class="post-feature">
+	<img alt="{{- image.alt -}}" src="{{- image.source -}}">
+	{%- if image.credit and layout == 'post' -%}
+		<figcaption><a href="{{- image.link -}}">Photo credit {{ image.credit -}}</a></figcaption>
+	{%- endif -%}
+</figure>
+
+<div class="post-info">
+	<{{- titleTag }} class="post-title">
+		{{- title -}}
+	</{{- titleTag -}}>
+
+	<datetime class="post-date">{{- date | date -}}</datetime>
+
+	{%- if layout != 'post' -%}
+		<a class="post-link" href="{{- link -}}">Read more<span>: {{ title }}</a>
 	{%- endif -%}
 
-	<datetime>{{- date | date -}}</datetime>
-
 	{%- if tags and layout == 'post' -%}
-		<dl>
+		<dl class="post-tags">
 			<dt>Tags:</dt>
 			{%- for tag in tags -%}
 				{%- if tag != 'posts' -%}<dd><a href="/blog/tags/{{- tag | slug -}}/">{{- tag -}}</a></dd>{%- endif -%}
@@ -24,4 +31,5 @@
 		</dl>
 	{%- endif -%}
 
+</div>
 {%- endmacro -%}
