fix tags on posts

--- a/source/template/includes/post-meta.njk
+++ b/source/template/includes/post-meta.njk
@@ -1,4 +1,4 @@
-{%- macro postMeta(image, title, date, link, tags) -%}
+{%- macro postMeta(image, title, date, link) -%}
 
 {%- set titleTag -%}
 	{{- 'h1' if layout == 'post' else 'p' -}}
