add category to posts, start styles for meta, lists

--- a/source/presentation/scss/components/_post-meta.scss
+++ b/source/presentation/scss/components/_post-meta.scss
@@ -1,10 +1,3 @@
-.post-feature {
-	img {
-		aspect-ratio: var(--postFeature-image-aspectRatio, 4/3);
-		object-fit: cover;
-	}
-}
-
 .post-date {
 	display: block;
 }
@@ -12,4 +5,14 @@
 .post-link {
 	display: inline-block;
 	inline-size: fit-content;
+}
+
+.post-category,
+.post-tags {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.5em;
+
+	dt { font-weight: 600; }
+	dd { margin-inline: 0; }
 }
