--- a/source/template/layouts/post.njk
+++ b/source/template/layouts/post.njk
@@ -6,7 +6,7 @@ pageClass: post
 {%- from "post-meta.njk" import postMeta with context -%}
 
 <article class="post">
-	{{- postMeta(image, title, date, tags) -}}
+	{{- postMeta(image, title, date, tags, category) -}}
 
 	<div class="post-content">
 		{{- content | safe -}}
