update styles for first post in a list

--- a/source/presentation/scss/components/_post-meta.scss
+++ b/source/presentation/scss/components/_post-meta.scss
@@ -1,5 +1,14 @@
+.post-info {
+	--siblingText-marginBlockStart: 0;
+}
+
 .post-date {
 	display: block;
+}
+
+.post-title {
+	margin-block: 1.75rem;
+	line-height: 1.1;
 }
 
 .post-link {
