--- a/source/template/layouts/home.njk
+++ b/source/template/layouts/home.njk
@@ -14,8 +14,8 @@ pageClass: home
 
 	{{- content | safe -}}
 
-	<a href="/about/">About</a>
-	<a href="/contact/">Contact</a>
+	<a href="/about/" class="button">About</a>
+	<a href="/contact/" class="button button-accent">Contact</a>
 </section>
 
 <section aria-labelledby="post-list">
