--- a/source/presentation/scss/components/_links.scss
+++ b/source/presentation/scss/components/_links.scss
@@ -1,8 +1,14 @@
 $linkLineSize: max(2px, 0.1em);
 
 a {
+  --link-backgroundColor: transparent;
+  --link-color: var(--color-secondary);
+
   transition: all 0.3s ease;
-  color: var(--link-color, var(--color-secondary));
+  background-color: var(--link-backgroundColor);
+  color: var(--link-color);
+  outline: $linkLineSize solid var(--link-outline-color, transparent);
+  outline-offset: $linkLineSize;
   text-decoration-thickness: var(--link-textDecorationThickness, #{$linkLineSize});
   text-decoration-color: var(--link-textDecorationColor, currentColor);
 
@@ -11,9 +17,7 @@ a {
   }
 
   &:focus {
-    border-radius: $linkLineSize;
-    outline: $linkLineSize solid currentColor;
-    outline-offset: $linkLineSize;
+    --link-outline-color: currentColor;
     text-decoration: none;
   }
 }
