--- a/source/presentation/scss/settings/_colors.scss
+++ b/source/presentation/scss/settings/_colors.scss
@@ -3,8 +3,8 @@
 // Color palette created in coolors.
 // https://coolors.co/392d43-e8e6d8-e75626-3d4853-84c4b1
 $colors: (
-	"dark": #392d43,
-	"light": #e8e6d8,
+	"dark": #2a2131,
+	"light": #e1decc,
 	"primary": #3d4853,
 	"secondary": #84c4b1,
 	"tertiary": #e75626
