add header styles

--- a/source/template/includes/header.njk
+++ b/source/template/includes/header.njk
@@ -1,7 +1,5 @@
 {%- macro header() -%}
 
-{%- include 'logo.svg' -%}
-
-<p>{{- meta.title -}}<p>
+<p>{%- include 'logo.svg' -%} {{- meta.title -}}</p>
 
 {%- endmacro -%}
