--- a/source/presentation/scss/layouts/_post.scss
+++ b/source/presentation/scss/layouts/_post.scss
@@ -1,6 +1,10 @@
-.post .main {
+.post {
 
-	.container {
+	.main {
+		padding-block-start: 0;
+	}
+
+	.main .container {
 		grid-column: full;
 		display: grid;
 		grid-template-columns: subgrid;
@@ -15,9 +19,9 @@
 	.post-feature {
 		--image-aspectRatio: 16/9;
 
-		grid-column: wide;
+		grid-column: full;
 		display: grid;
-		grid-template-areas: 'main';
+		grid-template-areas: 'feature';
 		justify-items: end;
 		align-items: start;
 
@@ -27,11 +31,13 @@
 
 		picture,
 		figcaption {
-			grid-area: main;
+			grid-area: feature;
 		}
 
 		picture {
 			z-index: -1;
+			max-inline-size: 1800px;
+			margin-inline: auto;
 		}
 
 		figcaption {
@@ -43,7 +49,7 @@
 	}
 
 	.post-info {
-		grid-column: main;
+		grid-column: wide;
 		margin-block-end: 2em;
 
 		@container main (inline-size > 80ch) {
