eh add some styles to the tag list while I'm in here again

--- a/source/template/includes/taxonomy.njk
+++ b/source/template/includes/taxonomy.njk
@@ -1,6 +1,6 @@
 {%- macro taxonomy(collection, type) -%}
 
-<ul>
+<ul class="{{- type -}}-list" role="list">
 {%- for taxonomy in collection %}
 	{%- if taxonomy != 'pages' and taxonomy != 'posts' %}
 		<li>
